--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="icon" href="img1/logo.png" type="image/x-icon" />
   <title>AHA Sparkling Water - Products & ingredients | Coca-Cola US</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
 
 
 </head>
 
 <body style="background-color:#e9ecf0;">
-
-
+   
+ 
+    
     <div class="headerContent">
       <div class="logo">
         <img class="thelogo" src="img1/Coke-company-logo-black.svg" />
@@ -34,9 +36,8 @@
       <div class="headertagicon">
         <img src="user id/user-light-128.webp">
       </div>
-      <div>
-        <button></button>
-      </div>
+    </div>
+   
 
 
 
@@ -294,7 +295,10 @@
   </div>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
 
 </body>
 
